# patpy_vishi

./: .cruft.json  .gitignore  .gitmodules  .readthedocs.yaml  CHANGELOG.md  README.md  experiments.ipynb  pyproject.toml
.claude/: settings.json
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: release.yaml  test.yaml
docs/: conf.py  contributing.md  references.bib
docs/_static/: custom.css
docs/api/: datasets.md  index.md  tools.md
docs/notebooks/: differential_analysis.ipynb  representation_methods_example.ipynb  supervised_methods_example.ipynb
docs/tutorials/: index.md
envs/: helical.yaml
src/patpy/: __init__.py  _settings.py
src/patpy/datasets/: __init__.py  _dataloader.py  _datasets.py  synthetic.py
src/patpy/pl/: basic.py
src/patpy/pp/: __init__.py  basic.py
src/patpy/tl/: __init__.py  _base_sample_method.py  _differential_utils.py  _permanova.py  _types.py  condition_comparison.py  evaluation.py  factorial_comparison.py  sample_representation.py  supervised.py
tests/: conftest.py  test_composition.py  test_datasets.py  test_differential.py  test_evaluation.py  test_helical_integration.py  test_pascient.py  test_pp_basic.py  test_sample_representation_methods.py  test_supervised_methods.py
