[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "patpy"
version = "0.15.2"
description = "A toolbox for patient or sample representation from single-cell data"
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [
  { name = "Vladimir Shitov", email = "vladimir.shitov@helmholtz-munich.de" },
]
authors = [
  { name = "Vladimir Shitov" },
]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "anndata>=0.8",
  "ehrapy",
  "gudhi",
  "matplotlib>=3.6",
  "numpy>=1.23",
  "opentsne>=0.6",
  "pandas>=1.5",
  "plottable",
  "scipy>=1.10",
  "seaborn>=0.12",
]

optional-dependencies.de = [
  "pertpy[de]>=1.0.5",
]
optional-dependencies.dev = [
  # CLI for bumping the version number
  "pre-commit",
  "twine>=4.0.2",
]
optional-dependencies.diffusionemd = [
  "diffusionemd",
  "phate>=1.0.11",
]
optional-dependencies.doc = [
  "docutils>=0.8,!=0.18.*,!=0.19.*",
  "ipykernel",
  "ipython",
  "myst-nb>=1.1",
  "nbsphinx",
  "pandas",
  # Until pybtex >0.24.0 releases: https://bitbucket.org/pybtex-devs/pybtex/issues/169/
  "setuptools",
  "sphinx>=8.1",
  "sphinx-autodoc-typehints",
  "sphinx-book-theme>=1",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-tabs",
  "sphinxcontrib-bibtex>=1",
  "sphinxext-opengraph",
]
optional-dependencies.gloscope-py-cpu = [
  "pynndescent",
]
optional-dependencies.gloscope-py-gpu = [
  "cuml",
  "cupy",
]
optional-dependencies.helical = [
  "helical>=1.8.3",
]
optional-dependencies.milo-edger = [
  "pertpy[milo-edger]>=1.0.5",
]
optional-dependencies.mixmil = [
  "mixmil>=0.1.2",
]
optional-dependencies.mrvi = [
  "scvi-tools>=1.2",
  "torch>=1.13",
]
optional-dependencies.pascient = [
  # `pascient` itself is not on PyPI; install it manually:
  #   pip install git+https://github.com/genentech/pascient.git@main
  "hydra-core>=1.3",
  "lightning",
  "s3fs",
]
optional-dependencies.pilot = [
  "pilotpy",
]
# `pulsar` is not on PyPI; install it manually:
#   pip install git+https://github.com/snap-stanford/PULSAR.git@main
optional-dependencies.scpoli = [
  "scarches>=0.5.1",
]
optional-dependencies.test = [
  "coverage",
  "pytest",
  "pytest-cov",
]
optional-dependencies.wassersteintsne = [
  "wassersteintsne>=1.1",
]
# https://docs.pypi.org/project_metadata/#project-urls
urls.Documentation = "https://patpy.readthedocs.io/"
urls.Homepage = "https://github.com/lueckenlab/patpy"
urls.Source = "https://github.com/lueckenlab/patpy"

[dependency-groups]
dev = [
  "pre-commit",
  "twine>=4.0.2",
]
test = [
  "coverage>=7.10",
  "pytest",
  "pytest-cov",     # For VS Code’s coverage functionality
]
doc = [
  "ipykernel",
  "ipython",
  "myst-nb>=1.1",
  "nbsphinx",
  "pandas",
  "sphinx>=8.1",
  "sphinx-autodoc-typehints",
  "sphinx-book-theme>=1",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-tabs",
  "sphinxcontrib-bibtex>=1",
  "sphinxcontrib-katex",
  "sphinxext-opengraph",
]

[tool.hatch.metadata]
allow-direct-references = true # Allow installing packages from git repositories

[tool.hatch.envs.default]
installer = "uv"
dependency-groups = [ "dev" ]

[tool.hatch.envs.docs]
dependency-groups = [ "doc" ]
scripts.build = "sphinx-build -M html docs docs/_build {args}"
scripts.open = "python -m webbrowser -t docs/_build/html/index.html"
scripts.clean = "git clean -fdX -- {args:docs}"

# Test the lowest and highest supported Python versions with normal deps
[[tool.hatch.envs.hatch-test.matrix]]
deps = [ "stable" ]
python = [ "3.11", "3.14" ]

# Test the newest supported Python version also with pre-release deps
[[tool.hatch.envs.hatch-test.matrix]]
deps = [ "pre" ]
python = [ "3.14" ]

[tool.hatch.envs.hatch-test]
dependency-groups = [ "dev", "test" ]

[tool.hatch.envs.hatch-test.overrides]
# If the matrix variable `deps` is set to "pre",
# set the environment variable `UV_PRERELEASE` to "allow".
matrix.deps.env-vars = [
  { key = "UV_PRERELEASE", value = "allow", if = [ "pre" ] },
]

[tool.ruff]
line-length = 120
src = [ "src" ]
extend-include = [ "*.ipynb" ]
exclude = [
  "docs/notebooks/**",
]

format.docstring-code-format = true

lint.select = [
  "B",      # flake8-bugbear
  "BLE",    # flake8-blind-except
  "C4",     # flake8-comprehensions
  "D",      # pydocstyle
  "E",      # Error detected by Pycodestyle
  "F",      # Errors detected by Pyflakes
  "I",      # isort
  "RUF100", # Report unused noqa directives
  "TID",    # flake8-tidy-imports
  "UP",     # pyupgrade
  "W",      # Warning detected by Pycodestyle
]
lint.ignore = [
  "B008", # Errors from function calls in argument defaults. These are fine when the result is immutable.
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D105", # __magic__ methods are often self-explanatory, allow missing docstrings
  "D107", # Missing docstring in __init__
  # Disable one in each pair of mutually incompatible rules
  "D203", # We don’t want a blank line before a class docstring
  "D213", # <> We want docstrings to start immediately after the opening triple quote
  "D400", # first line should end with a period [Bug: doesn’t work with single-line docstrings]
  "D401", # First line should be in imperative mood; try rephrasing
  "E501", # line too long -> we accept long comment lines; formatter gets rid of long code lines
  "E731", # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
  "E741", # allow I, O, l as variable names -> I is the identity matrix
]
lint.per-file-ignores."*/__init__.py" = [ "F401" ]
lint.per-file-ignores."docs/*" = [ "I" ]
lint.per-file-ignores."tests/*" = [ "D" ]
lint.pydocstyle.convention = "numpy"

[tool.pytest]
strict = true
testpaths = [ "tests" ]
addopts = [
  "--import-mode=importlib", # allow using test files with same name
]
markers = [
  "helical: integration tests that load real Helical foundation models (slow, requires helical extra)",
]

[tool.coverage.run]
source = [ "patpy" ]
patch = [ "subprocess" ]
omit = [
  "**/test_*.py",
]

[tool.cruft]
skip = [
  "tests",
  "src/**/__init__.py",
  "src/**/basic.py",
  "docs/api.md",
  "docs/changelog.md",
  "docs/references.bib",
  "docs/references.md",
  "docs/notebooks/example.ipynb",
]
